deploy: 913f08f92b2db74dbf0d64ffcfeb92cf7ab2413e

--- a/create-campaigns/lend-and-borrow-campaign.html
+++ b/create-campaigns/lend-and-borrow-campaign.html
@@ -36,7 +36,7 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-a77252e5.js";
+            window.path_to_searchindex_js = "../searchindex-5c21e275.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../toc-2ab97246.js"></script>
@@ -198,7 +198,7 @@
 <p>To create a Morpho campaign, you need to configure the following info:</p>
 <ul>
 <li>Campaign Name</li>
-<li>Action: the action you would like to incentivize - supply to a vault. Only lend campaign is currently supported for Morpho</li>
+<li>Action: the action you would like to incentivize - supply to a vault. Only lend campaigns are currently supported for Morpho</li>
 <li>Vault Info: select the chain where the vault is deployed and enter the vault address. The vault information should be displayed automatically. You may also enter the vault name if this is the first time setting up a campaign for this vault</li>
 </ul>
 <p><img src="../.gitbook/assets/Screenshot 2026-02-13 at 00.10.11.png" alt=""><figcaption></figcaption></p>
