--- a/print.html
+++ b/print.html
@@ -37,7 +37,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-a77252e5.js";
+            window.path_to_searchindex_js = "searchindex-5c21e275.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc-2ab97246.js"></script>
@@ -236,14 +236,21 @@
 <p>Note that only a selected list of whitelisted rewards tokens and pool tokens are supported on Incentra. Please contact us if you’d like to whitelist a token that isn’t currently available.</p>
 <div style="break-before: page; page-break-before: always;"></div>
 <h1 id="lend-and-borrow-campaigns"><a class="header" href="#lend-and-borrow-campaigns">Lend and Borrow Campaigns</a></h1>
-<p>Incentra supports lending and borrowing protocols to reward users for supplying collateral in a vault or borrowing from a vault.</p>
+<p>Incentra supports lending and borrowing protocols to reward users for supplying collateral in a vault/pool or borrowing from a vault/pool. The currently supported protocols are <strong>Euler</strong>, <strong>Aave</strong>, and <strong>Morpho</strong>.</p>
 <h3 id="lendborrow-campaigns-for-euler-finance"><a class="header" href="#lendborrow-campaigns-for-euler-finance">Lend/Borrow Campaigns for Euler Finance</a></h3>
 <ul>
 <li>In lending campaigns, rewards are allocated based on each user’s share of the total time-weighted average (TWA) balances of the corresponding eToken among all eligible users.</li>
 <li>In borrowing campaigns, rewards are allocated proportionally to each user’s share of the average debt within the vault. To accommodate the increasing debt due to interests,  each user’s averaged debt is calculated using samples at random points of time spacing around 10 minutes.</li>
 </ul>
-<p>Brevis fetches eToken and debt data directly from the blockchain, periodically updates balances for all eligible users, calculates individual rewards, and generates zero-knowledge proofs (ZKPs) to ensure the correctness of these calculations. These ZKPs are verified on-chain and the results will be utilized by the rewards distribution contracts to distribute rewards accordingly.</p>
 <p><strong>NOTE</strong>: If the user has multiple sub-accounts, the owner account will receive the rewards for all its sub-accounts.</p>
+<h3 id="lendborrow-campaigns-for-aave"><a class="header" href="#lendborrow-campaigns-for-aave">Lend/Borrow Campaigns for Aave</a></h3>
+<ul>
+<li>In lending campaigns, rewards are allocated based on each user’s share of the total time-weighted average (TWA) aToken balance among all eligible users. Additionally, if IncentivizeNetLending is enabled, a looping penalty is applied using the liquidation threshold to adjust the effective lending balance based on the user’s borrow amount.</li>
+<li>In borrowing campaigns, rewards are allocated proportionally to each user’s share of the average debt token balance within the pool.</li>
+</ul>
+<h3 id="lend-campaigns-for-morpho"><a class="header" href="#lend-campaigns-for-morpho">Lend Campaigns for Morpho</a></h3>
+<p>Only lend campaigns are currently supported for Morpho. Rewards are allocated based on each user’s share of the total time-weighted average (TWA) vault shares balance among all eligible users. The vault shares represent the user’s proportional ownership of the underlying Morpho pool assets.</p>
+<p>Brevis fetches eToken, vault shares, and debt data directly from the blockchain, periodically updates balances for all eligible users, calculates individual rewards, and generates zero-knowledge proofs (ZKPs) to ensure the correctness of these calculations. These ZKPs are verified on-chain and the results will be utilized by the rewards distribution contracts to distribute rewards accordingly.</p>
 <p><strong>NOTE</strong>: The underlying asset token of a vault needs to be whitelisted first before the vault can be used in a campaign. Please contact us if you’d like to whitelist an asset token that isn’t currently available.</p>
 <div style="break-before: page; page-break-before: always;"></div>
 <h1 id="technical-architecture"><a class="header" href="#technical-architecture">Technical Architecture</a></h1>
@@ -390,7 +397,7 @@ To deposit rewards, you may also directly transfer reward tokens to the campaign
 <p>To create a Morpho campaign, you need to configure the following info:</p>
 <ul>
 <li>Campaign Name</li>
-<li>Action: the action you would like to incentivize - supply to a vault. Only lend campaign is currently supported for Morpho</li>
+<li>Action: the action you would like to incentivize - supply to a vault. Only lend campaigns are currently supported for Morpho</li>
 <li>Vault Info: select the chain where the vault is deployed and enter the vault address. The vault information should be displayed automatically. You may also enter the vault name if this is the first time setting up a campaign for this vault</li>
 </ul>
 <p><img src=".gitbook/assets/Screenshot 2026-02-13 at 00.10.11.png" alt=""><figcaption></figcaption></p>
