--- a/welcome/campaign-types/lend-and-borrow-campaigns.html
+++ b/welcome/campaign-types/lend-and-borrow-campaigns.html
@@ -36,7 +36,7 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../../searchindex-5c21e275.js";
+            window.path_to_searchindex_js = "../../searchindex-7b471f6b.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../toc-2ab97246.js"></script>
@@ -185,11 +185,11 @@
 <p><strong>NOTE</strong>: If the user has multiple sub-accounts, the owner account will receive the rewards for all its sub-accounts.</p>
 <h3 id="lendborrow-campaigns-for-aave"><a class="header" href="#lendborrow-campaigns-for-aave">Lend/Borrow Campaigns for Aave</a></h3>
 <ul>
-<li>In lending campaigns, rewards are allocated based on each user’s share of the total time-weighted average (TWA) aToken balance among all eligible users. Additionally, if IncentivizeNetLending is enabled, a looping penalty is applied using the liquidation threshold to adjust the effective lending balance based on the user’s borrow amount.</li>
-<li>In borrowing campaigns, rewards are allocated proportionally to each user’s share of the average debt token balance within the pool.</li>
+<li>In lending campaigns, rewards are allocated proportional to each user’s time-weighted average (TWA) aToken balance in the pool. Additionally, if IncentivizeNetLending is enabled, a looping penalty is applied. View here for the detailed formula.</li>
+<li>In borrowing campaigns, rewards are allocated proportionally to each user’s time-weighted average debt token balance in the pool.</li>
 </ul>
 <h3 id="lend-campaigns-for-morpho"><a class="header" href="#lend-campaigns-for-morpho">Lend Campaigns for Morpho</a></h3>
-<p>Only lend campaigns are currently supported for Morpho. Rewards are allocated based on each user’s share of the total time-weighted average (TWA) vault shares balance among all eligible users. The vault shares represent the user’s proportional ownership of the underlying Morpho pool assets.</p>
+<p>Only lend campaigns are currently supported for Morpho. Rewards are allocated proportional to each user’s time-weighted average (TWA) vault shares balance. The vault shares represent the user’s proportional ownership of the underlying Morpho pool collaterals.</p>
 <p>Brevis fetches eToken, vault shares, and debt data directly from the blockchain, periodically updates balances for all eligible users, calculates individual rewards, and generates zero-knowledge proofs (ZKPs) to ensure the correctness of these calculations. These ZKPs are verified on-chain and the results will be utilized by the rewards distribution contracts to distribute rewards accordingly.</p>
 <p><strong>NOTE</strong>: The underlying asset token of a vault needs to be whitelisted first before the vault can be used in a campaign. Please contact us if you’d like to whitelist an asset token that isn’t currently available.</p>
 
