deploy: da4ba38833f8d20985c90d01df095af3bcf439dc

--- a/print.html
+++ b/print.html
@@ -245,7 +245,7 @@
 <p><strong>NOTE</strong>: If the user has multiple sub-accounts, the owner account will receive the rewards for all its sub-accounts.</p>
 <h3 id="lendborrow-campaigns-for-aave"><a class="header" href="#lendborrow-campaigns-for-aave">Lend/Borrow Campaigns for Aave</a></h3>
 <ul>
-<li>In lending campaigns, rewards are allocated proportional to each user’s time-weighted average (TWA) aToken balance in the pool. Additionally, if IncentivizeNetLending is enabled, a looping penalty is applied. View here for the detailed formula.</li>
+<li>In lending campaigns, rewards are allocated proportional to each user’s time-weighted average (TWA) aToken balance in the pool. Additionally, if IncentivizeNetLending is enabled, a looping penalty is applied. View <a href="#lend-borrow-campaign-aave">here</a> for the detailed formula.</li>
 <li>In borrowing campaigns, rewards are allocated proportionally to each user’s time-weighted average debt token balance in the pool.</li>
 </ul>
 <h3 id="lend-campaigns-for-morpho"><a class="header" href="#lend-campaigns-for-morpho">Lend Campaigns for Morpho</a></h3>
@@ -392,7 +392,7 @@ To deposit rewards, you may also directly transfer reward tokens to the campaign
 <li>Campaign Name</li>
 <li>Action: the action you would like to incentivize - supply to a pool or borrow from a pool.
 <ul>
-<li>For a lending campaign, you can optionally choose to incentivize net lending, where users will only receive rewards based on their net position values in the pool. View here for detailed rules about net lending.</li>
+<li>For a lending campaign, you can optionally choose to incentivize net lending, where users will only receive rewards based on their net position values in the pool. View <a href="#lend-borrow-campaign-aave">here</a> for detailed rules about net lending.</li>
 </ul>
 </li>
 <li>Pool Info: select the chain where the pool is deployed and enter the aToken address. The pool information should be displayed automatically. You should also enter the pool name if this is the first time setting up a campaign for this pool.</li>
