--- a/welcome/campaign-types/lend-and-borrow-campaigns.html
+++ b/welcome/campaign-types/lend-and-borrow-campaigns.html
@@ -185,7 +185,7 @@
 <p><strong>NOTE</strong>: If the user has multiple sub-accounts, the owner account will receive the rewards for all its sub-accounts.</p>
 <h3 id="lendborrow-campaigns-for-aave"><a class="header" href="#lendborrow-campaigns-for-aave">Lend/Borrow Campaigns for Aave</a></h3>
 <ul>
-<li>In lending campaigns, rewards are allocated proportional to each user’s time-weighted average (TWA) aToken balance in the pool. Additionally, if IncentivizeNetLending is enabled, a looping penalty is applied. View here for the detailed formula.</li>
+<li>In lending campaigns, rewards are allocated proportional to each user’s time-weighted average (TWA) aToken balance in the pool. Additionally, if IncentivizeNetLending is enabled, a looping penalty is applied. View <a href="../../earn-rewards/campaign-rules.html#lend-borrow-campaign-aave">here</a> for the detailed formula.</li>
 <li>In borrowing campaigns, rewards are allocated proportionally to each user’s time-weighted average debt token balance in the pool.</li>
 </ul>
 <h3 id="lend-campaigns-for-morpho"><a class="header" href="#lend-campaigns-for-morpho">Lend Campaigns for Morpho</a></h3>
