--- a/create-campaigns/lend-and-borrow-campaign.html
+++ b/create-campaigns/lend-and-borrow-campaign.html
@@ -193,7 +193,7 @@
 <li>Campaign Name</li>
 <li>Action: the action you would like to incentivize - supply to a pool or borrow from a pool.
 <ul>
-<li>For a lending campaign, you can optionally choose to incentivize net lending, where users will only receive rewards based on their net position values in the pool. View here for detailed rules about net lending.</li>
+<li>For a lending campaign, you can optionally choose to incentivize net lending, where users will only receive rewards based on their net position values in the pool. View <a href="../earn-rewards/campaign-rules.html#lend-borrow-campaign-aave">here</a> for detailed rules about net lending.</li>
 </ul>
 </li>
 <li>Pool Info: select the chain where the pool is deployed and enter the aToken address. The pool information should be displayed automatically. You should also enter the pool name if this is the first time setting up a campaign for this pool.</li>
